Message to be shown now directly in your HTML
Untill now the message was written in the ::before content property of the lightbox, since now the ::before content property displays the message within the attribute "data-message" so you could define your message directly from the HTML

--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
         </footer>
 
         <!-- TIP OFF -->
-        <!-- <a class="tip-off" href="<?php echo $_SERVER['REQUEST_URI'].'#close'; ?>" id="close"></a> -->
-        <a class="tip-off" href="#close" id="close"></a>
+        <a class="tip-off" data-message="For a better browsing experience please use your device vertically" href="#close" id="close"></a>
 
     </body>
 </html>
